deployment/kubernetes/kibana-template.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kibana
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
        spire-managed-identity: 'true'
      annotations:
        inject.istio.io/templates: 'sidecar,spire'
    spec:
      serviceAccountName: kibana
      containers:
        - name: kibana
          image: docker.elastic.co/kibana/kibana:8.14.0
          ports:
          - containerPort: 5601
            name: kibana
---
kind: Service
apiVersion: v1
metadata:
  name: kibana-svc
spec:
  selector:
    app: kibana
  ports:
    - name: http
      protocol: "TCP"
      port: 5601
