deployment/kubernetes/ingress-template.yaml
#
# Expose Kibana externally
#
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kibana-virtual-service
spec:
  hosts:
  - logs.$BASE_DOMAIN
  gateways:
  - istio-system/default-gateway
  http:
  - route:
    - destination:
        host: kibana-svc
        port:
          number: 5601
